--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
@@ -10,11 +11,18 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "@langchain/community": "^0.2.12",
+    "@langchain/core": "^0.2.7",
+    "@langchain/openai": "^0.1.3",
+    "@langchain/textsplitters": "^0.0.3",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dictionary-en": "^4.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "faiss-node": "^0.5.1",
+    "langchain": "^0.2.5",
     "node-nlp": "^4.27.0",
     "nspell": "^2.1.5",
     "openai": "^4.48.1"
